# Prop99-SDID-Causal-and-Robustness-Suite

./: .gitignore  README.md  main.py  pyproject.toml
configs/: prop99.yaml
data/processed/: meta.json
docs/: design_decisions.md
reports/tables/: main_results.json  robustness_summary.json  scm_summary.json  scm_vs_sdid.json  sdid_placebo_space_summary.json  sdid_placebo_time_summary.json
src/: 01_build_panel.py  02_scm_baseline.py  03_scm_placebos.py  04_sdid.py  05_sdid_placebos.py  06_robustness_suite.py
src/data/: prop99.py
src/estimators/: scm.py  sdid.py
src/metrics/: diagnostics.py
src/robustness/: perturbations.py  placebos.py  runner.py
